force-app/main/default/objects/cgcloud__Product_Template__c/cgcloud__Product_Template__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the product template object used for products.</description>
    <label>Product Template</label>
    <nameField>
        <label>Product Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>