force-app/main/default/objects/cgcloud__Product_Template__c/fields/cgcloud__Price_Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Price_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether a price must be assigned to the product.</description>
    <label>Price Required</label>
    <type>Checkbox</type>
</CustomField>