force-app/main/default/objects/cgcloud__Product_Template__c/recordTypes/cgcloud__Product.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Product</fullName>
    <active>true</active>
    <description>This Record Type will be used to create Product Template of Type Product</description>
    <label>Product</label>
</RecordType>