force-app/main/default/objects/cgcloud__Product_Template__c/recordTypes/cgcloud__Product_Group.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Product_Group</fullName>
    <active>true</active>
    <description>This Record Type will be used to create Product Template of Type Product Group</description>
    <label>Product Group</label>
</RecordType>