force-app/main/default/objects/cgcloud__Product_Template__c/validationRules/cgcloud__Avoid_Sales_Org_Modification.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Avoid_Sales_Org_Modification</fullName>
    <active>true</active>
    <description>The Sales Org can&apos;t be edited after Product Template creation.</description>
    <errorConditionFormula>ISCHANGED(cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Sales Org can&apos;t be edited after Product Template creation.</errorMessage>
</ValidationRule>