force-app/main/default/objects/cgcloud__Product_Template__c/listViews/cgcloud__Product_Templates.listView-meta.xml
<ListView>
    <fullName>cgcloud__Product_Templates</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>cgcloud__Active__c</columns>
    <columns>cgcloud__Price_Required__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>Product Templates</label>
    <language>en_US</language>
</ListView>